infra/k8s/14-client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
  namespace: nagar-seva
spec:
  replicas: 2
  selector:
    matchLabels: { app: client }
  template:
    metadata:
      labels: { app: client }
    spec:
      containers:
        - name: client
          image: nagar-seva/client:latest
          ports:
            - containerPort: 5173
---
apiVersion: v1
kind: Service
metadata:
  name: client
  namespace: nagar-seva
spec:
  selector: { app: client }
  ports:
    - port: 5173
      targetPort: 5173
